--- a/coursera-dlaicourse-handwriting-recognition.ipynb
+++ b/coursera-dlaicourse-handwriting-recognition.ipynb
@@ -1,114 +1,171 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ddanieli/fun-deep-learning/blob/master/coursera-dlaicourse-handwriting-recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "rX8mhOLljYeM"
-      },
-      "source": [
-        "##### Copyright 2019 The TensorFlow Authors."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "colab": {},
-        "colab_type": "code",
-        "id": "BZSlp3DAjdYf"
-      },
-      "outputs": [],
-      "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-        "# you may not use this file except in compliance with the License.\n",
-        "# You may obtain a copy of the License at\n",
-        "#\n",
-        "# https://www.apache.org/licenses/LICENSE-2.0\n",
-        "#\n",
-        "# Unless required by applicable law or agreed to in writing, software\n",
-        "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "# See the License for the specific language governing permissions and\n",
-        "# limitations under the License."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "N9-BCmi15L93"
-      },
-      "outputs": [],
-      "source": [
-        "import tensorflow as tf\n",
-        "\n",
-        "class myCallback(tf.keras.callbacks.Callback):\n",
-        "  def on_epoch_end(self, epoch, logs={}):\n",
-        "    if(logs.get('accuracy')>0.6):\n",
-        "      print(\"\\nReached 60% accuracy so cancelling training!\")\n",
-        "      self.model.stop_training = True\n",
-        "\n",
-        "mnist = tf.keras.datasets.fashion_mnist\n",
-        "\n",
-        "(x_train, y_train),(x_test, y_test) = mnist.load_data()\n",
-        "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
-        "\n",
-        "callbacks = myCallback()\n",
-        "\n",
-        "model = tf.keras.models.Sequential([\n",
-        "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
-        "  tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
-        "  tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
-        "])\n",
-        "model.compile(optimizer=tf.optimizers.Adam(),\n",
-        "              loss='sparse_categorical_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
-        "\n",
-        "model.fit(x_train, y_train, epochs=10, callbacks=[callbacks])"
-      ]
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "collapsed_sections": [],
-      "include_colab_link": true,
-      "name": "Course 1 - Part 4 - Lesson 4 - Notebook.ipynb",
-      "private_outputs": true,
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.5rc1"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/ddanieli/fun-deep-learning/coursera-dlaicourse-handwriting-recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "\n",
+    "## Exercise 2\n",
+    "In the course you learned how to do classification using Fashion MNIST, a data set containing items of clothing. There's another, similar dataset called MNIST which has items of handwriting -- the digits 0 through 9.\n",
+    "\n",
+    "Write an MNIST classifier that trains to 99% accuracy or above, and does it without a fixed number of epochs -- i.e. you should stop training once you reach that level of accuracy.\n",
+    "\n",
+    "Some notes:\n",
+    "1. It should succeed in less than 10 epochs, so it is okay to change epochs to 10, but nothing larger\n",
+    "2. When it reaches 99% or greater it should print out the string \"Reached 99% accuracy so cancelling training!\"\n",
+    "3. If you add any additional variables, make sure you use the same names as the ones used in the class\n",
+    "\n",
+    "I've started the code for you below -- how would you finish it?"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 1
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "N9-BCmi15L93"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor Flow Version: 2.0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(f\"Tensor Flow Version: {tf.__version__}\")\n",
+    "\n",
+    "from os import path, getcwd, chdir\n",
+    "\n",
+    "# DO NOT CHANGE THE LINE BELOW. If you are developing in a local\n",
+    "# environment, then grab mnist.npz from the Coursera Jupyter Notebook\n",
+    "# and place it inside a local folder and edit the path to that location\n",
+    "# path = f\"{getcwd()}/../tmp2/mnist.npz\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: train_mnist\n",
+    "def train_mnist():\n",
+    "    # Please write your code only where you are indicated.\n",
+    "    # please do not remove # model fitting inline comments.\n",
+    "\n",
+    "    # YOUR CODE SHOULD START HERE\n",
+    "    class FitCallback(tf.keras.callbacks.Callback):\n",
+    "        def on_epoch_end(self, epoch, logs={}):\n",
+    "            if((logs.get('accuracy') is not None and logs.get('accuracy') > 0.99) or\n",
+    "               (logs.get('acc') is not None and logs.get('acc') > 0.99)):\n",
+    "                print(\"\\nReached 99% accuracy so cancelling training!\")\n",
+    "                self.model.stop_training = True\n",
+    "    # YOUR CODE SHOULD END HERE\n",
+    "\n",
+    "    mnist = tf.keras.datasets.mnist\n",
+    "\n",
+    "    (x_train, y_train),(x_test, y_test) = mnist.load_data() # (path=path)\n",
+    "\n",
+    "    fit_callback = FitCallback()\n",
+    "    x_train = x_train / 255.0\n",
+    "    x_test = x_test / 255.0\n",
+    "\n",
+    "    model = tf.keras.models.Sequential([\n",
+    "        tf.keras.layers.Flatten(),\n",
+    "        tf.keras.layers.Dense(1024, activation=tf.nn.relu),\n",
+    "        tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
+    "    ])\n",
+    "\n",
+    "    model.compile(optimizer='adam',\n",
+    "                  loss='sparse_categorical_crossentropy',\n",
+    "                  metrics=['accuracy'])\n",
+    "\n",
+    "    # model fitting\n",
+    "    history = model.fit(\n",
+    "        x_train, y_train, epochs=10, callbacks=[fit_callback]\n",
+    "    )\n",
+    "    # model fitting\n",
+    "    return history.epoch, history.history['acc'][-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 1s 0us/step\n",
+      "Train on 60000 samples\n",
+      "Epoch 1/10\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_mnist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "include_colab_link": true,
+   "name": "Course 1 - Part 4 - Lesson 4 - Notebook.ipynb",
+   "private_outputs": true,
+   "provenance": [],
+   "toc_visible": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
