--- a/coursera-dlaicourse-handwriting-recognition.ipynb
+++ b/coursera-dlaicourse-handwriting-recognition.ipynb
@@ -17,14 +17,12 @@
     "Some notes:\n",
     "1. It should succeed in less than 10 epochs, so it is okay to change epochs to 10, but nothing larger\n",
     "2. When it reaches 99% or greater it should print out the string \"Reached 99% accuracy so cancelling training!\"\n",
-    "3. If you add any additional variables, make sure you use the same names as the ones used in the class\n",
-    "\n",
-    "I've started the code for you below -- how would you finish it?"
+    "3. If you add any additional variables, make sure you use the same names as the ones used in the class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -53,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -63,17 +61,12 @@
    "source": [
     "# GRADED FUNCTION: train_mnist\n",
     "def train_mnist():\n",
-    "    # Please write your code only where you are indicated.\n",
-    "    # please do not remove # model fitting inline comments.\n",
-    "\n",
-    "    # YOUR CODE SHOULD START HERE\n",
     "    class FitCallback(tf.keras.callbacks.Callback):\n",
     "        def on_epoch_end(self, epoch, logs={}):\n",
     "            if((logs.get('accuracy') is not None and logs.get('accuracy') > 0.99) or\n",
     "               (logs.get('acc') is not None and logs.get('acc') > 0.99)):\n",
     "                print(\"\\nReached 99% accuracy so cancelling training!\")\n",
     "                self.model.stop_training = True\n",
-    "    # YOUR CODE SHOULD END HERE\n",
     "\n",
     "    mnist = tf.keras.datasets.mnist\n",
     "\n",
@@ -96,9 +89,7 @@
     "    # model fitting\n",
     "    history = model.fit(\n",
     "        x_train, y_train, epochs=10, callbacks=[fit_callback]\n",
-    "    )\n",
-    "    # model fitting\n",
-    "    return history.epoch, history.history['acc'][-1]\n"
+    "    )"
    ]
   },
   {
@@ -106,6 +97,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -114,8 +106,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11493376/11490434 [==============================] - 1s 0us/step\n",
       "Train on 60000 samples\n",
       "Epoch 1/10\n"
      ]
@@ -130,6 +120,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
